chore(design): fix width overflow issue

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -66,7 +66,7 @@ li {
   flex-direction: column;
   height: 100%;
   justify-content: center;
-  margin: 0 20px;
+  padding: 0 20px;
   max-width: 1140px;
   width: calc(100% - 40px);
 
